{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 13,
  "lineage": "2df465c9-3e25-7b40-2389-44ed130d3e42",
  "resources": [
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http_https_outbound_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group/sg-0b0c2ccc264520c7b",
            "description": "Allow SSH HTTP and HTTPS",
            "egress": [],
            "id": "sg-0b0c2ccc264520c7b",
            "ingress": [],
            "name": "ssh_http_https_outbound_allow",
            "name_prefix": "",
            "owner_id": "519093654264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_http_https_allow"
            },
            "tags_all": {
              "Name": "ssh_http_https_allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c120d3830769ea6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow_Outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-0fac74d63c76ace05",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fac74d63c76ace05",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b0c2ccc264520c7b",
            "security_group_rule_id": "sgr-0fac74d63c76ace05",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-032334f3ad6b22117",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-032334f3ad6b22117",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b0c2ccc264520c7b",
            "security_group_rule_id": "sgr-032334f3ad6b22117",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-025fae16a1d736b5a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-025fae16a1d736b5a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b0c2ccc264520c7b",
            "security_group_rule_id": "sgr-025fae16a1d736b5a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-0bf8c51c672a3fe13",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bf8c51c672a3fe13",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b0c2ccc264520c7b",
            "security_group_rule_id": "sgr-0bf8c51c672a3fe13",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-09b5627f977e288f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b5627f977e288f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03de46d6c6c4edf28",
            "private_dns": "ip-10-1-1-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.96",
            "public_dns": "ec2-3-238-133-135.compute-1.amazonaws.com",
            "public_ip": "3.238.133.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d44c87711c3b32b8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db3689cc803f2c40",
            "tags": {
              "Name": "Webserver"
            },
            "tags_all": {
              "Name": "Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0c2ccc264520c7b"
            ]
          },
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:internet-gateway/igw-02b427e9a9bb9d626",
            "id": "igw-02b427e9a9bb9d626",
            "owner_id": "519093654264",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-03c120d3830769ea6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:route-table/rtb-0b64c6618d9eec1ee",
            "id": "rtb-0b64c6618d9eec1ee",
            "owner_id": "519093654264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b427e9a9bb9d626",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTable"
            },
            "tags_all": {
              "Name": "RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c120d3830769ea6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077b205e8c68d56f1",
            "route_table_id": "rtb-0b64c6618d9eec1ee",
            "subnet_id": "subnet-0db3689cc803f2c40"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.RouteTable",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:subnet/subnet-0db3689cc803f2c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db3689cc803f2c40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519093654264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-03c120d3830769ea6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:vpc/vpc-03c120d3830769ea6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-029400bd7e269abd6",
            "default_route_table_id": "rtb-09e9b78a089882854",
            "default_security_group_id": "sg-0616ebaf447c49e17",
            "dhcp_options_id": "dopt-0450b3d63ee435195",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c120d3830769ea6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e9b78a089882854",
            "owner_id": "519093654264",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}